Replace shutterfly's logo, align logos correctly

--- a/app/assets/less/style/logos.less
+++ b/app/assets/less/style/logos.less
@@ -12,4 +12,17 @@
     font-weight: bold;
     text-align: center;
   }
+
+  @logos-height: 70px;
+
+  .col-xs-2 {
+    height: @logos-height;
+    text-align: center;
+
+    a {
+      display: block;
+      height: @logos-height;
+      line-height: @logos-height;
+    }
+  }
 }
